--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
     "react-use": "^17.6.0",
+    "resend": "^6.0.2",
     "schema-dts": "^1.1.5",
     "sharp": "^0.34.3",
     "sonner": "^2.0.5",
